Fixed some errors, added start for GpuModelHandler integration test. Updated report a bit

--- a/doc/misc.bib
+++ b/doc/misc.bib
@@ -75,3 +75,10 @@
   year={2010},
   publisher={Elsevier}
 }
+
+@book{cleancode2008,
+  title={Clean code: a handbook of agile software craftsmanship},
+  author={Martin, Robert C},
+  year={2008},
+  publisher={Pearson Education}
+}
