--- a/doc/hpc.bib
+++ b/doc/hpc.bib
@@ -59,4 +59,11 @@
     howpublished = {\url{http://docs.nvidia.com/cuda/kepler-tuning-guide}}
 }
 
+@article{volkov2011unrolling,
+  title={Unrolling parallel loops},
+  author={Volkov, Vasily},
+  journal={Tutorial at the},
+  pages={133},
+  year={2011}
+}
 
