--- a/doc/misc.bib
+++ b/doc/misc.bib
@@ -82,3 +82,12 @@
   year={2008},
   publisher={Pearson Education}
 }
+
+@book{sadava_life,
+  title={Life The Science of Biology},
+  author={Sadava, David and Hillis, David and Heller, Craig and Orians, Gorgdon and Purves, Wiliam},
+  year={2008},
+  publisher={Sinauer Associates},
+  EDITION = {8th}
+}
+
