--- a/doc/statistics.bib
+++ b/doc/statistics.bib
@@ -336,3 +336,27 @@ howpublished = {\url{http://on-demand.gputechconf.com/gtc/2013/presentations/S31
   pages={125--129},
   year={1988}
 }
+
+@article{recoding_comment,
+  title={Recoding preventive exposures to get valid measures of interaction on an additive scale},
+  author={Knol, Mirjam J and VanderWeele, Tyler J},
+  journal={European journal of epidemiology},
+  volume={26},
+  number={10},
+  pages={825--826},
+  year={2011},
+  publisher={Springer}
+}
+
+@article{recoding_2011,
+  title={Estimating measures of interaction on an additive scale for preventive exposures},
+  author={Knol, Mirjam J and VanderWeele, Tyler J and Groenwold, Rolf HH and Klungel, Olaf H and Rovers, Maroeska M and Grobbee, Diederick E},
+  journal={European journal of epidemiology},
+  volume={26},
+  number={6},
+  pages={433--438},
+  year={2011},
+  publisher={Springer}
+}
+
+
