Updates to report

--- a/doc/misc.bib
+++ b/doc/misc.bib
@@ -91,3 +91,20 @@
   EDITION = {8th}
 }
 
+@misc{design_patterns,
+  title={Design principles and design patterns},
+  howpublished = {\url{http://www.objectmentor.com/resources/articles/Principles_and_Patterns.pdf}},
+  year={2000},
+  author={Martin, Robert C}
+}
+
+@misc{comp_repro_2013,
+  title={Measuring Reproducibility in Computer Systems Research},
+  author={Moraila, Gina and Shankaran, Akash and Shi, Zuoming and Warren, Alex M},
+  howpublished = {\url{http://reproducibility.cs.arizona.edu/v1/tr.pdf}},
+  year={2013}
+}
+
+
+
+
