--- a/doc/statistics.bib
+++ b/doc/statistics.bib
@@ -359,4 +359,23 @@ howpublished = {\url{http://on-demand.gputechconf.com/gtc/2013/presentations/S31
   publisher={Springer}
 }
 
+@article{uvehag_master_thesis,
+  title={Design and Implementation of a Computational Platform and a Parallelized Interaction Analysis for Large Scale Genomics Data in Multiple Sclerosis},
+  author={Uvehag, Daniel},
+  year={2013}
+}
+
+@article{or_mislead,
+  title={When can odds ratios mislead?},
+  author={Davies, Huw Talfryn Oakley and Crombie, Iain Kinloch and Tavakoli, Manouche},
+  journal={Bmj},
+  volume={316},
+  number={7136},
+  pages={989--991},
+  year={1998},
+  publisher={BMJ}
+}
+
+
+
 
